make improvements based on feedback (dont rely as heavily on js, fix alignment of menu items, improve wording in integer input section)

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 html, body {
     height: 100vh;
     width: 100vw;
@@ -30,10 +34,9 @@ html, body {
     color: #333;
     font-size: 14pt;
     font-family: 'Bree Serif';
-    padding-top: 1em;
-    padding-bottom: 1em;
+    padding: 1em;
+    box-sizing: border-box;
     width: 100%;
-    text-align: center;
     cursor: pointer;
 }
 
